--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.0",
     "prettier": "^2.3.2",
+    "reading-time": "^1.5.0",
     "sass": "^1.42.0",
     "sass-loader": "10"
   }
