--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
+    "gen_deploy": "run-s generate deploy"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "reading-time": "^1.5.0",
     "sass": "^1.42.0",
