--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "gen_deploy": "run-s generate deploy"
+    "gen_deploy": "run-s generate deploy",
+    "build": "nuxt build"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
