--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "gen_deploy": "run-s generate deploy",
-    "build": "nuxt build"
+    "build": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
