added vue-disqus to app

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "push-dir": "^0.4.1",
-    "tailwindcss-rtl": "^0.7.3"
+    "tailwindcss-rtl": "^0.7.3",
+    "vue-disqus": "^4.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
