--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@nuxt/content",
-      "@types/node",
-      "@nuxtjs/i18n"
+      "@types/node"
     ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
