--- a/package.json
+++ b/package.json
@@ -14,18 +14,14 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@tailwindcss/typography": "^0.4.1",
-    "nuxt": "^2.15.7",
-    "push-dir": "^0.4.1"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "npm-run-all": "^4.1.5",
-    "reading-time": "^1.5.0",
-    "sass": "^1.42.0",
-    "sass-loader": "10"
+    "push-dir": "^0.4.1",
+    "reading-time": "^1.5.0"
   }
 }
