--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "npm-run-all": "^4.1.5",
-    "push-dir": "^0.4.1",
-    "reading-time": "^1.5.0"
+    "push-dir": "^0.4.1"
   }
 }
