--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "gen_deploy": "run-s generate deploy",
-    "build": "nuxt generate"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
