--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "profile",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "@nuxtjs/axios": "^5.13.6",
-    "@tailwindcss/typography": "^0.4.1",
-    "nuxt": "^2.15.7"
+    "@nuxt/content": "^2.9.0",
+    "nuxt": "^3.8.2"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@nuxt/types": "2.17.2",
+    "autoprefixer": "^10.4.16",
     "npm-run-all": "^4.1.5",
-    "push-dir": "^0.4.1"
+    "postcss": "^8.4.32",
+    "push-dir": "^0.4.1",
+    "tailwindcss": "^3.3.6",
+    "vue": "3.3.10"
   }
 }
