--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxt/content": "^2.9.0",
-    "nuxt": "^3.8.2"
+    "@nuxt/content": "^2.12.0",
+    "nuxt": "^3.10.3"
   },
   "devDependencies": {
-    "@nuxt/types": "2.17.2",
-    "autoprefixer": "^10.4.16",
+    "@nuxt/types": "2.17.3",
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.32",
     "push-dir": "^0.4.1",
-    "tailwindcss": "^3.3.6",
-    "vue": "3.3.10"
+    "vue": "3.3.10",
+    "vue-tsc": "^1.8.27"
   }
 }
