--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@nuxt/types": "2.17.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@tailwindcss/typography": "^0.5.10",
     "npm-run-all": "^4.1.5",
     "push-dir": "^0.4.1",
     "vue": "3.3.10",
