--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "deploy": "push-dir --dir=./output/public --branch=gh-pages --cleanup"
+    "deploy": "push-dir --dir='./.output/public' --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/content": "^2.12.0",
