--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "deploy": "push-dir --dir='./.output/public' --branch=gh-pages --cleanup"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/content": "^2.12.0",
@@ -16,7 +15,6 @@
     "@nuxt/types": "2.17.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/typography": "^0.5.10",
-    "push-dir": "^0.4.1",
     "vue": "3.3.10",
     "vue-tsc": "^1.8.27"
   }
