--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: oven-sh/setup-bun@v1
     - run: bun i
-    - run: bun run build
+    - run: bun run generate
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
