--- a/package.json
+++ b/package.json
@@ -3,19 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "dev": "nuxt dev",
-    "generate": "nuxt generate"
-  },
+  "scripts": {},
   "dependencies": {
-    "@nuxt/content": "^2.12.0",
-    "nuxt": "^3.10.3"
+    "@tailwindcss/vite": "^4.1.13",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@nuxt/types": "2.17.3",
-    "@nuxtjs/tailwindcss": "^6.11.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "vue": "3.3.10",
-    "vue-tsc": "^1.8.27"
+    "vite": "^7.1.4"
   }
 }
