--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5174",
     "build": "vite build"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "vite": "^7.1.4"
   }
 }
